--- a/changelog.txt
+++ b/changelog.txt
@@ -1,2 +1,5 @@
 2022.04.18:
-* changed: content moved from `andry81/andry81` repository
+* new: content moved from `andry81/tacklelib` repository
+
+2022.04.18:
+* new: content moved from `andry81/andry81` repository
