--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 2022.04.18:
+* new: content moved from `andry81/contools` repository
+
+2022.04.18:
 * new: content moved from `andry81/tacklelib` repository
 
 2022.04.18:
