--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+2022.04.30:
+* new: content index file for `accum-content.sh` script
+* refactor: `badges/common` and `images/common` moved into `common/badges` and `common/images`
+
 2022.04.18:
 * new: content moved from `andry81/contools` repository
 
