--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2022.05.03:
+* changed: `content-cache.yml` moved into `repo/andry81/andry81`
+
 2022.04.30:
 * new: content index file for `accum-content.sh` script
 * refactor: `badges/common` and `images/common` moved into `common/badges` and `common/images`
