--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 2022.05.03:
+* new: `content-cache.yml` for `andry81/contools` repository
+
+2022.05.03:
 * changed: `content-cache.yml` moved into `repo/andry81/andry81`
 
 2022.04.30:
