--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 2022.05.03:
+* fixed: repo/andry81/contools/content-cache.yml: execution fixup
+
+2022.05.03:
 * new: `content-cache.yml` for `andry81/contools` repository
 
 2022.05.03:
