--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,14 @@
-2022.05.03:
-* fixed: repo/andry81/contools/content-cache.yml: execution fixup
+2022.05.04:
+* new: common/badges/support: `issuehunt-support.svg` badge
 
 2022.05.03:
-* new: `content-cache.yml` for `andry81/contools` repository
+* fixed: repo/andry81/contools/content-index.yml: execution fixup
 
 2022.05.03:
-* changed: `content-cache.yml` moved into `repo/andry81/andry81`
+* new: `content-index.yml` for `andry81/contools` repository
+
+2022.05.03:
+* changed: `content-index.yml` moved into `repo/andry81/andry81`
 
 2022.04.30:
 * new: content index file for `accum-content.sh` script
