--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2022.05.06:
+* new: `content-index.yml` for `andry81/bittools` repository
+
 2022.05.04:
 * new: common/badges/support: `issuehunt-support.svg` badge
 
