--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2022.05.11:
+* changed: repo/andry81/andry81: moved badges with detailed statistic into `stickers` directory
+
 2022.05.06:
 * new: `content-index.yml` for `andry81/bittools` repository
 
