--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2022.07.22:
+* fixed: repo/andry81/andry81: sync with updated content-config
+
 2022.05.11:
 * changed: repo/andry81/andry81: moved badges with detailed statistic into `stickers` directory
 
