--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+2022.08.27:
+* fixed: common/badges/stats: minor fixup
+* new: common/badges/stats: `user--coderstats--net.svg` badge
+
 2022.07.22:
 * fixed: repo/andry81/andry81: sync with updated content-config
 
