--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 2022.08.27:
+* new: common/avatars: organization avatars
+
+2022.08.27:
 * fixed: common/badges/stats: minor fixup
 * new: common/badges/stats: `user--coderstats--net.svg` badge
 
