--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2023.10.29:
+* new: common/readmes/releases/Release.md.in: list of all links and badges in a semi-template form for the releases section
+
 2023.05.04:
 * new: common/buttons: github-download-button.html, github-download-button.svg: embeddable github download buttons (html - styled interactive, svg - static)
 * new: common/logos/github/github-mark*.svg: standalone github svg logo files
