--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2024.05.02:
+* new: common/readmes/releases/Release.md.in: VirusTotal browser extensions to check download link
+
 2023.11.17:
 * new: common/logos/cygwin: added ico plus 16x16 png
 
