--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2025.01.30:
+* new: common/badges/donate/boosty-donate.svg: `boosty.to` donate badge
+
 2024.11.04:
 * new: common/readmes/gh-stats/README.md.in: semi-template `README.md` for `{{GH_OWNER}}/{{GH_REPO}}--gh-stats` repo
 
