--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2025.04.07:
+* new: common/logos/windows: added svg and png files, from xp to 11
+
 2025.01.30:
 * new: common/badges/donate/boosty-donate.svg: `boosty.to` donate badge
 
