--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2025.04.08:
+* new: common/logos/floppy/floppy-win*.ico: added xp, 7, 8.1, 10 icons
+
 2025.04.07:
 * new: common/logos/windows: added svg and png files, from xp to 11
 
