--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 2025.04.08:
+* new: common/logos/windows/winvista.png: added Windows Vista logo
+
+2025.04.08:
 * new: common/logos/floppy/floppy-win*.ico: added xp, 7, 8.1, 10 icons
 
 2025.04.07:
