--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+2025.08.13:
+* changed: common/badges/board/stackexchange-*.svg: improve visibility
+
 2025.08.11:
 * new: common/badges/board/stackexchange-*.svg: added `stackexchange` badges
 
